# indicator-kdeconnect

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTORS  INSTALL  README.md
data/: indicator-kdeconnect.desktop  kdeconnect.contract
debian/: changelog  control  copyright
rpm/: indicator-kdeconnect.spec
src/: Device.vala  DeviceIndicator.vala  FirstTimeWizard.vala  KDEConnectManager.vala  StartupManager.vala  main.vala
src/contractor/: Contractor.vala
